Bug 150790 - Show adjacent bookmark ranges
Summary: Show adjacent bookmark ranges
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 inReleaseNotes:7.5
Keywords:
Depends on:
Blocks: Bookmarks
  Show dependency treegraph
 
Reported: 2022-09-05 10:13 UTC by NISZ LibreOffice Team
Modified: 2022-12-04 22:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File for testing (8.28 KB, application/vnd.oasis.opendocument.text)
2022-09-05 10:16 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-09-05 10:13:34 UTC
Description:
Adjacent bookmark ranges are shown with a single vertical line, e.g. [Lo|rem] instead of [Lo][rem]. It’s hard to recognize the vertical line as a bookmark boundary, especially at line start with covering of the left page border of enabled Formatting Marks, or with field shading of non-breaking spaces.

Steps to Reproduce:
1. Load the attached file.

Actual Results:
Adjacent bookmark ranges are not visible at page border and hard to differentiate them from non-break spaces.

Expected Results:
Adjacent bookmarks are visible at page border and easier to differentiate them.


Reproducible: Always


User Profile Reset: No



Additional Info:
See also
Tdf#45589, tdf#67669

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: dc92a4d973086ce8a6a5f75ba0f4d4c9ca05537a
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-09-05 10:14:08 UTC
Note
In MSO, an I-beam shape is used for the adjacent bookmark ranges: [Lorem⌶ ipsum].
Comment 2 NISZ LibreOffice Team 2022-09-05 10:16:23 UTC
Created attachment 182220 [details]
File for testing
Comment 3 Commit Notification 2022-09-16 09:34:02 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5e71ec6aa0d4f9971f5e2b6f7091d18668c2f0b9

tdf#150790 tdf#150791 tdf#150947 tdf#150956 sw, a11y: fix visible bookmarks

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-09-26 08:23:50 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d3050ff4a1355f7ebd3d4e7ddc8fb64f2b8894dd
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded