tdf#150790 tdf#150791 tdf#150947 tdf#150956 sw, a11y: fix visible bookmarks

Fix bookmark visibility (see Tools -> Options -> LibreOffice Writer
-> Formatting Aids -> Bookmarks):

– tdf#150791 Paint I-beam symbol (⌶) for point bookmarks instead of
  a vertical line (which was overlapped with visible page margin at
  beginning of the paragraphs, also it was very similar to the NBSP
  and narrow NBSP shading). Modify associated dialog window label in
  optformataidspage.ui according to this.

– tdf#150790 Neighboring bookmark ranges are shown as ][ instead of
  a single vertical line (which could not be distinguished from
  point bookmark symbol and overlapping page border).
  Note: this has been implemented for bookmarks with metadata colors
  since commit 412e0ab26618c38f548c340f85ef63bbe73ef6b2 "tdf#150717
  sw RDF metadata: add custom color bookmark boundary marks".

– Multiple bookmarks at the same character position are visible
  now, e.g. instead of a single |, neighboring bookmarks with
  point bookmarks are shown as "] ⌶ [" or "] ] ⌶ ⌶ [ [" etc.

– tdf#150956 Do not show hidden _Toc and _Ref bookmarks imported
  from OOXML, like MSO does.

Add bookmark accessibility and layout dump:

– Add SwBookmarkPortion::HandlePortion() to return with bookmark names
  and types, e.g. for ] ⌶ [ as
  "#Name1 Bookmark End#Name2 Bookmark#Name3 Bookmark Start"
  (where "Name1"–"Name3" are names of the bookmarks, while "Bookmark",
  "End" and "Start" are localized versions of these strings),
  allowing XML layout dump of bookmark data.

– tdf#150947 Extend SwAccessiblePortionData::Special() to forward the
  previous HandlePortion() bookmark data to screen readers depending on
  bookmark visibility (i.e. SwViewOption::IsShowBookmarks()).

– Add unit tests based on the extended XML layout dump, also
  adjust existing unit tests.

More visibility fixes:

– multiple start marks of range bookmarks positioned before
  the character position, multiple end marks of range bookmarks
  positioned after the character position, i.e.
  single type boundary marks are there outside of the bookmark text

  some |text| here
      [[    ]]

– neighboring end and start marks are centered around the
  character position:

   |text1|text2|
  [    ]] [[    ]

– marks of the same character position are sorted based on their
  type and metadata color:

  – mark order: ], ⌶, [, e.g.

  ] ] ⌶ ⌶ [ [ [

  – color order: reversed at bookmark end, e.g.

  [c1 [c2 [c3 ... c3] c2] c1]

Follow-up to commit 412e0ab26618c38f548c340f85ef63bbe73ef6b2
"tdf#150717 sw RDF metadata: add custom color bookmark boundary marks"
and commit 4ce8120f1e53f7b81e653b01d141643013bc69ab
"tdf#45589 sw: create and paint text portions for bookmarks".

Change-Id: Ia53903efbc44a531338b8615d9812d6da270e39f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139817
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>